syntax = "proto3";

package envoy.extensions.tracers.opentelemetry.resource_detectors.v3;

message PerRouteResourceDetectorConfig {
}
